[tool.poetry]
name = "wavefinder"
version = "0.1.0"
description = ""
authors = ["Juan Fran Martín <juanframaro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.6.0"
attrs = "24.2.0"
beautifulsoup4 = "4.12.2"
blinker = "1.8.2"
bs4 = "0.0.1"
cachetools = "5.5.0"
certifi = "2024.7.4"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
deptry = "0.14.2"
gitdb = "4.0.11"
gitpython = "3.1.43"
h11 = "0.14.0"
idna = "3.7"
importlib-metadata = "7.1.0"
jinja2 = "3.1.4"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
narwhals = "1.5.0"
numpy = "2.1.0"
outcome = "1.3.0.post0"
packaging = "24.1"
pandas = "2.2.2"
pathspec = "0.12.1"
pillow = "10.4.0"
polars = "^1.15.0"
protobuf = "5.27.3"
pyarrow = "17.0.0"
pydantic = "2.3.0"
pydantic-core = "2.6.3"
pydeck = "0.9.1"
pygments = "2.18.0"
pysocks = "1.7.1"
pytelegrambotapi = "4.14.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
referencing = "0.35.1"
requests = "2.32.3"
rich = "13.7.1"
rpds-py = "0.20.0"
selenium = "4.16.0"
six = "1.16.0"
smmap = "5.0.1"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
soupsieve = "2.5"
streamlit = "^1.40.2"
telebot = "0.0.5"
tenacity = "8.5.0"
toml = "0.10.2"
toolz = "0.12.1"
tornado = "6.4.1"
trio = "0.25.0"
trio-websocket = "0.11.1"
typing-extensions = "4.12.2"
tzdata = "2024.1"
tzlocal = "5.2"
urllib3 = "2.2.2"
validators = "0.28.0"
watchdog = "4.0.0"
wsproto = "1.2.0"
zipp = "3.18.1"
pytest = "^8.3.3"
tabulate = "^0.9.0"
streamlit-aggrid = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
